# sourcemod-mongodb-extension

./: .gitignore  CHANGELOG.md  README.md
http_extension/: CMakeLists.txt  CMakeLists_minimal.txt  Dockerfile.compat  README.md  build_extension.sh  complete_extension.cpp  config_manager.cpp  config_manager.h  extension.cpp  extension.h  http_client.cpp  http_client.h  json_structures.cpp  json_structures.h  minimal_complete_extension.cpp  minimal_extension.h  mongodb_api.cpp  mongodb_api.h  natives.h  natives_http_mongodb.cpp  simple_extension.cpp  simple_extension.h
http_extension/configs/: mongodb.cfg  mongodb.json  mongodb_config_example.cfg
http_extension/scripting/: advanced_mongodb_examples.sp  compile_test.sp  mongo_config_example.sp  mongo_console_test.sp  mongodb_comprehensive_test.sp  test_advanced_features.sp  test_enhanced_stringmap.sp  test_http_mongodb.sp  test_mongo_query.sp  test_real_data.sp
http_extension/scripting/configs/: mongodb.cfg  mongodb_production.cfg
http_extension/scripting/include/: http_mongodb.inc
mongodb-api-service/: .env.example  .env.production  .env.security  README.md  package-lock.json  package.json  setup-mongodb-config.sh  start-production.sh  test_api_endpoints.sh  test_comprehensive_api.sh  test_security.sh
mongodb-api-service/src/: server.ts
mongodb-api-service/src/config/: security.ts
mongodb-api-service/src/managers/: ConnectionManager.ts
mongodb-api-service/src/middleware/: auth.ts  errorHandler.ts  requestLogger.ts  security.ts
mongodb-api-service/src/routes/: batchRoutes.ts  connectionRoutes.ts  databaseRoutes.ts  healthRoutes.ts
mongodb-api-service/src/types/: index.ts
mongodb-api-service/src/utils/: logger.ts
